--- a/code/test.html
+++ b/code/test.html
@@ -4,58 +4,20 @@
     <meta charset="utf-8" />
     <title>测试</title>
     <style type="text/css">
-     * {
-      margin: 0;
-      padding: 0;
-     }
-     span {
-      background-color: #34ffdd;
-      margin: 10px 20px 10px 20px;
-      padding: 10px 20px 10px 20px;
-     }
+     
     </style>
 </head>
 <body>
-    <div id="a">
-      <div id="b">
-        <div id="c">
-          <div id="d">oooo</div>
-        </div>
-      </div>
-    </div>
+    
     <script type="text/javascript">
-
-function red() {
-    console.log('red');
-}
-function green() {
-    console.log('green');
-}
-function yellow() {
-    console.log('yellow');
+var name = 'kop';
+function lookName(){
+  alert(this.name);
 }
 
-function light(timer, cb) {
-    return new Promise(resolve => {
-        setTimeout(() => {
-            cb();
-            resolve();
-        }, timer);
-    });
-}
-
-function step() {
-    Promise.resolve().then(() => {
-        return light(3000, red);
-    }).then(() => {
-        return light(2000, yellow);
-    }).then(() => {
-        return light(1000, green);
-    }).then(() => {
-        return step();
-    });
-}
-
+console.log(window.name);  //kop
+lookName();                //kop
+window.lookName();         //kop
 
     </script>
 </body>
